--- a/header.html
+++ b/header.html
@@ -47,7 +47,7 @@
       class="navbar navbar-expand-sm navbar-light"
       style="background-image: linear-gradient(to right, #0f2d37, #d70080);"
     >
-      <div class="container-fluid">
+      <div class="container-fluid text-white">
       <button
         class="navbar-toggler"
         type="button"
@@ -59,7 +59,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <li class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="navbar-brand" href="index.html">
@@ -72,12 +72,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <h3 class="display-6 text-white">SantaRosa CSWD</h3>
+            <h3 class="display-6 m-2">SantaRosa CSWD</h3>
           </li>
           <?php
             require_once 'includes/dbh.inc.php';
             require_once 'includes/functions.inc.php';
             if (isset($_SESSION['username'])) {
+              echo '<li class="nav-item"><h4 class="display-6 m-2">Welcome'; echo ($_SESSION["name"]); echo '</h4></li>';
               echo '<li class="nav-item"><a class="btn btn-dark m-2" href="includes/logout.inc.php">Log Out</a></li>';
             }
           ?>
