--- a/test.html
+++ b/test.html
@@ -26,6 +26,29 @@
             </table>
 
         </div>
+
+         <h1>jQuery PH Locations Demo</h1>
+        <div>
+            <table>
+                <tr>
+                    <td>Region</td>
+                    <td><select id="region1"></select></td>
+                </tr>
+                <tr>
+                    <td>Province</td>
+                    <td><select id="province1"></select></td>
+                </tr>
+                <tr>
+                    <td>City</td>
+                    <td><select id="city1"></select></td>
+                </tr>
+                <tr>
+                    <td>Barangay</td>
+                    <td><select id="barangay1"></select></td>
+                </tr>
+            </table>
+
+        </div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
         <!-- script type="text/javascript" src="../../jquery.ph-locations.js"></script -->
         <script type="text/javascript" src="https://f001.backblazeb2.com/file/buonzz-assets/jquery.ph-locations.js"></script -->
@@ -65,6 +88,42 @@
                 $('#barangay').ph_locations({'location_type': 'barangays'});
 
                 $('#region').ph_locations('fetch_list');
+            });
+
+            var my_handlers1 = {
+
+                fill_provinces:  function(){
+
+                    var region_code1 = $(this).val();
+                    $('#province1').ph_locations('fetch_list', [{"region_code": region_code1}]);
+                    
+                },
+
+                fill_cities: function(){
+
+                    var province_code1 = $(this).val();
+                    $('#city1').ph_locations( 'fetch_list', [{"province_code": province_code1}]);
+                },
+
+
+                fill_barangays: function(){
+
+                    var city_code1 = $(this).val();
+                    $('#barangay1').ph_locations('fetch_list', [{"city_code": city_code1}]);
+                }
+            };
+
+            $(function(){
+                $('#region1').on('change', my_handlers1.fill_provinces);
+                $('#province1').on('change', my_handlers1.fill_cities);
+                $('#city1').on('change', my_handlers1.fill_barangays);
+
+                $('#region1').ph_locations({'location_type': 'regions'});
+                $('#province1').ph_locations({'location_type': 'provinces'});
+                $('#city1').ph_locations({'location_type': 'cities'});
+                $('#barangay1').ph_locations({'location_type': 'barangays'});
+
+                $('#region1').ph_locations('fetch_list');
             });
         </script>
     </body>
